<resources>
    <string name="app_name">i-Wallet</string>
    <string name="need_help">Need help?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_or_create_a_new_account">Login or Create a New Account</string>
    <string name="pay_using_upi_wallet_bank_accounts_and_cards">Pay Using UPI,Wallet,Bank Accounts and Cards</string>
    <string name="proceed_securely">Proceed Securely</string>
    <string name="verify_text">We have sent you  OTP on</string>
    <string name="confirm">Confirm</string>
    <string name="enter_otp">Enter OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cashback"><![CDATA[Cashback &]]></string>
    <string name="contact_permission_rationale">Need contacts read permission for fetching and displaying contacts</string>

</resources>