<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main.LoginActivity">
    <ImageView
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or_create_a_new_account"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/grey_900"
        android:textSize="@dimen/_15sdp"/>
    <TextView
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_using_upi_wallet_bank_accounts_and_cards"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/_12sdp"/>
    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/grey_800"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:gravity="left"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                />
            <EditText
                android:maxLength="10"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:singleLine="true"
             android:inputType="phone"
                android:background="@null"
                android:id="@+id/etPhone"
                />

        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/appcolor"/>
    </LinearLayout>
    <TextView
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/appcolor"
        android:layout_gravity="right"
        android:text="@string/need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/rectangle_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp">


        <LinearLayout
            android:id="@+id/llProceed"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                app:tint="@color/white"
                android:id="@+id/secure"
               android:layout_gravity="center_vertical"
                android:src="@drawable/ic_shield"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp">

            </ImageView>
            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/proceed_securely"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>