<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/rr_main"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="885dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/back" />


                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/verify"
                    android:padding="@dimen/_5sdp" />

            </FrameLayout>


            <LinearLayout
                android:id="@+id/llTextVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_otp"
                    android:textColor="@color/black"

                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_text"
                    android:textColor="@color/black_trans"

                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tvMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+91-9808089333"
                    android:textColor="@color/black_trans"

                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llTextVerify"
                android:layout_marginTop="@dimen/_45sdp"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/rl_1"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/square"
                    android:padding="@dimen/_2sdp">

                    <EditText
                        android:id="@+id/et1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:nextFocusRight="@id/et2"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/textgrey"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="@dimen/_15sdp"></EditText>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_2"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/rl_1"
                    android:background="@drawable/square"
                    android:padding="@dimen/_2sdp">

                    <EditText
                        android:id="@+id/et2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:nextFocusRight="@id/et3"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/textgrey"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="@dimen/_15sdp"></EditText>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/rl_2"
                    android:background="@drawable/square"
                    android:padding="@dimen/_2sdp">

                    <EditText
                        android:id="@+id/et3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:nextFocusRight="@id/et4"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/textgrey"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="@dimen/_15sdp"></EditText>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/rl_3"
                    android:background="@drawable/square"
                    android:padding="@dimen/_2sdp">

                    <EditText
                        android:id="@+id/et4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@null"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/textgrey"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="@dimen/_15sdp" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/rlOtp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@color/appcolor"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSubmit"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:text="Request Another OTP"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSubmit"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/textgrey"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
